# VSS-AI-2019

./: .gitmodules  CMakeLists.txt  README.md  build.sh  configure.sh  run.sh
arduino/: arduino.ino
arduino/joystick_vss/: joystick_vss.ino
arduino/radio_transmitter/: radio_transmitter.ino
arduino/vss-open-loop-robot-control/: vss-open-loop-robot-control.ino
arduino/vss-pi-closed-loop-robot-control/: vss-pi-closed-loop-robot-control.ino
camera/: camera_calibration.txt
config/: communications.json  operation.json  operations.json  receiver.json  serial.json  system.json
include/communications/: receiver.h  sender.h  serial_repository.h
include/geometry/: field_line.h  vector_2d.h
include/io/: receiver.h  sender.h  serial_sender.h  tcp_receiver.h
include/labels/: labels.h
include/operation/: cb_operation.h  gk_operation.h  operation.h  st_operation.h
include/operations/: centerback_operation.h  goalkeeper_operation.h  operation.h  striker_operation.h
include/system/: system.h
include/world_model/: robot.h  world_model.h
src/: main.cpp
src/communications/: receiver.cc  sender.cc  serial_repository.cc
src/geometry/: field_line.cc  vector_2d.cc
src/io/: receiver.cc  sender.cc  serial_sender.cc  tcp_receiver.cc
src/operation/: cb_operation.cc  gk_operation.cc  st_operation.cc
src/operations/: centerback_operation.cc  goalkeeper_operation.cc  operation.cc  sriker_operation.cc
src/system/: system.cc
src/world_model/: robot.cc  world_model.cc
